--- a/adventure-game/build.gradle
+++ b/adventure-game/build.gradle
@@ -17,6 +17,7 @@ buildscript {
 allprojects {
     apply plugin: "eclipse"
     apply plugin: "idea"
+    apply plugin: "distribution"
 
     version = '1.0'
     ext {
